feat(stat): add hover border style

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -15,6 +15,7 @@ $header-menu-bd-color: #bdd4da;
 $app-content-border: 	1px solid rgba(189, 212, 218, .34);
 $app-content-hover-border: 1px solid #00d976;
 $app-content-border-radius: 4px;
+$app-content-shadow: 0 0 18px 0 rgba(160, 179, 184, .12);
 $graph-primary-color: #00c46c;
 $graph-secondary-color: #11b0fc;
 $graph-third-color: #fe7b4f;
@@ -25,7 +26,6 @@ $app-spacing-letter: .8px;
 
 $app-filter-color: #a0b3b8;
 $app-filter-border: 1px solid rgba(189, 212, 218, .65);
-$app-sidebar-shadow-color: rgba(160, 179, 184, .12);
 $active-filter-color: #00c46c;
 
 $mobile-breakpoint: 576px;
