feat(filter-button): add disabled behavior to apply button

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -25,6 +25,7 @@ $primary-hover-bg: #ececec;
 $app-spacing-letter: .8px;
 
 $app-filter-color: #a0b3b8;
+$app-disabled-filter-color: #bdd4da;
 $app-filter-border: 1px solid rgba(189, 212, 218, .65);
 $active-filter-color: #00c46c;
 
