--- a/app/assets/stylesheets/app/components/filter-button.scss
+++ b/app/assets/stylesheets/app/components/filter-button.scss
@@ -19,5 +19,10 @@
     font-family: $main-font;
     font-size: 14px;
     font-weight: bold;
+
+    &--disabled {
+      color: $app-disabled-filter-color;
+      cursor: not-allowed;
+    }
   }
 }
