feat(filters-container): add box-shadow

--- a/app/assets/stylesheets/app/components/filters-container.scss
+++ b/app/assets/stylesheets/app/components/filters-container.scss
@@ -5,6 +5,7 @@
     background: $white;
     border-top: $app-content-border;
     bottom: 0;
+    box-shadow: $app-content-shadow;
     color: $primary-font-color;
     cursor: pointer;
     font-family: $main-font;
