feat(styles): change disabled group_by button style

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -4,9 +4,11 @@ $white: #fff;
 $black: #000;
 $main-font: 'Qanelas';
 $primary-btn-color: #00c46c;
+$disabled-btn-color: #f7f9fb;
 $main-bg-color: #f7f9fb;
 $primary-font-color: #343434;
 $secondary-font-color: #a0b3b8;
+$disabled-font-color: #bdd4da;
 $content-bg-color: #fff;
 $signin-input-color: #ebebeb;
 $header-name-color: #a0b3b8;
