feat(datetime-filter): change font color in calendar

--- a/app/assets/stylesheets/app/components/datetime-filter.scss
+++ b/app/assets/stylesheets/app/components/datetime-filter.scss
@@ -6,6 +6,7 @@
   &-months,
   &-months &-month {
     background-color: $primary-btn-color;
+    color: $white;
     font-family: $main-font;
     letter-spacing: $app-spacing-letter;
   }
